--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./pages/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
