--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/8706e066b0.js" crossorigin="anonymous"></script>
     <title>Welcome to</title>
-    <link rel="stylesheet" href="../public\css\style.css" >
+   <link rel="stylesheet" href="../public\css\style.css" >
 </head>
 <body>
     
@@ -79,6 +79,10 @@
     </form>
 </div>  
 
+<div class="test">
+    <p>blabla c'est un test</p>
+    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam deleniti quae consequuntur neque ab consectetur cumque, cupiditate mollitia architecto, accusantium officiis explicabo suscipit obcaecati dolores sapiente ea provident laudantium ipsa?</span>
+</div>
     </main>
 
 <footer class="footer">
